ajout pop-up view and edit

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
                             <p class="card-text">Description du jeu.</p>
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exempleModal">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exempleModal">Edit</button>
+                                    <!-- Corrected target -->
+                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button>
+                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">Edit</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </article>
-                <!-- Duplicate this block for more cards -->
             </div>
         </div>
     </div>
