--- a/index.html
+++ b/index.html
@@ -1,55 +1,85 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Bootstrap Demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .card-img-top {
-            object-fit: cover;
-            max-height: 125px;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
+<style>
+    .card-img-top {
+        object-fit: cover;
+        max-height: 125px;
+    }
+</style>
 <body>
-    <!-- Header -->
-    <header class="d-flex flex-wrap justify-content-center py-3 text-bg-dark">
-        <a href="/" class="d-flex align-items-center text-white text-decoration-none">
-            <span class="fs-4 text-center">Games</span>
-        </a>
-    </header>
-
-    <!-- Section Title -->
+    
+<header class="d-flex flex-wrap justify-content-center py-3 text-bg-dark">
+    <a href="/" class="d-flex align-items-center text-white text-decoration-none">
+        <span class="fs-4 text-center">Games</span>
+    </a>
+</header>
     <section>
         <h1 class="text-center mt-2">Top Games</h1>
-    </section>
+     <!-- Card Gallery -->
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <!-- Card 1 -->
+                <!-- <article class="col">
+                        <div class="card shadow-sm">
+                            <svg
+                                class="bd-placeholder-img card-img-top"
+                                width="100%"
+                                height="225"
+                                xmlns="http://www.w3.org/2000/svg"
+                                role="img"
+                                aria-label="Placeholder: Thumbnail"
+                                preserveAspectRatio="xMidYMid slice"
+                                focusable="false"
+                            >
+                                <title>Placeholder</title>
+                                <rect width="100%" height="100%" fill="#55595c"></rect>
+                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">
+                                    Thumbnail
+                                </text>
+                            </svg>
 
-    <!-- Card Gallery -->
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <!-- Card 1 -->
-                <article class="col">
-                    <div class="card shadow-sm">
-                        <img src="votre-image.jpg" class="card-img-top" alt="Nom du jeu">
-                        <div class="card-body">
-                            <p class="card-text">Description du jeu.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <!-- Corrected target -->
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#exampleModal">Edit</button>
+                            <div class="card-body">
+                                <p class="card-text">
+                                    This is a wider card with supporting text below as a natural
+                                    lead-in to additional content. This content is a little bit
+                                    longer.
+                                </p>
+                                <div
+                                    class="d-flex justify-content-between align-items-center"
+                                >
+                                    <div class="btn-group">
+                                        <button
+                                            type="button"
+                                            class="btn btn-sm btn-outline-secondary"
+                                            data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                        >
+                                            View
+                                        </button>
+                                        <button
+                                            type="button"
+                                            class="btn btn-sm btn-outline-secondary"
+                                            data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                        >
+                                            Edit
+                                        </button>
+                                    </div>
+                                    <small class="text-muted">9 mins</small>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </article>
+                    </article> > -->
+                </div>
             </div>
         </div>
-    </div>
-
-    <!-- Modal -->
+    </section>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -67,7 +97,16 @@
         </div>
     </div>
 
-    <!-- Bootstrap Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+                crossorigin="anonymous"
+    ></script>
+    <script src="./script.js"></script>
+
+
+
+
+    <!-- Contenu ici -->
 </body>
 </html>
