ajout année etc... edit

--- a/from.html
+++ b/from.html
@@ -2,27 +2,31 @@
 		<div class="container p-5">
 			<form>
 				<div class="mb-3">
-					<label for="exampleInputEmail1" class="form-label"
-						>Email address</label
-					>
-					<input
-						type="email"
-						class="form-control"
-						id="exampleInputEmail1"
-						aria-describedby="emailHelp"
+                    <label for="title" class="form-label">Title</label>
+                    <input
+                        type="text"
+                        class="form-control"
+                        id="title"
+                        aria-describedby="titleHelp"
 					/>
-					<div id="emailHelp" class="form-text">
-						We'll never share your email with anyone else.
-					</div>
 				</div>
 				<div class="mb-3">
-					<label for="exampleInputPassword1" class="form-label">Password</label>
+					<label for="year" class="form-label">Year</label>
 					<input
-						type="password"
-						class="form-control"
-						id="exampleInputPassword1"
+                        type="number"
+                        class="form-control"
+                        id="year"
+                        aria-describedby="yearHelp"
 					/>
 				</div>
+                <div class="mb-3">
+                    <label for="imageUrl" class="form-label">Image URL</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="imageUrl"
+                      aria-describedby="imageUrlHelp"
+                      />
 				<div class="mb-3 form-check">
 					<input type="checkbox" class="form-check-input" id="exampleCheck1" />
 					<label class="form-check-label" for="exampleCheck1"
