--- a/from.html
+++ b/from.html
@@ -27,6 +27,7 @@
                       id="imageUrl"
                       aria-describedby="imageUrlHelp"
                       />
+                </div>
 				<div class="mb-3 form-check">
 					<input type="checkbox" class="form-check-input" id="exampleCheck1" />
 					<label class="form-check-label" for="exampleCheck1"
