--- a/from.html
+++ b/from.html
@@ -28,10 +28,20 @@
                       aria-describedby="imageUrlHelp"
                       />
                 </div>
-				
-		<button type="submit" class="btn btn-primary">Submit</button>
+				<div class="mb-3 form-check">
+					<input type="checkbox" class="form-check-input" id="exampleCheck1" />
+					<label class="form-check-label" for="exampleCheck1"
+						>Check me out</label
+					>
+				</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
 			</form>
-		
+		</div>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+			crossorigin="anonymous"
+		></script>
 
 
 
